deployment/gitsync-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
spec:
  containers:
    - name: backend
      image: node:16-alpine
      command:
        - sh
        - -c
        - |
          cd /var/app
          sleep 10
          npm i
          npm run start
      ports:
        - containerPort: 8080
      volumeMounts:
        - name: repo
          mountPath: "/var/app"
    - name: git-sync-sidecar
      image: k8s.gcr.io/git-sync:v3.1.6
      volumeMounts:
        - name: repo
          mountPath: /git
  volumes:
    - name: repo
      emptyDir: {}
