deployment/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
spec:
  containers:
    - name: backend
      image: ghcr.io/hamada-distributed/k8s-toyapp:backend
      ports:
        - containerPort: 8080
